--- a/components/case-extract/case-extract.less
+++ b/components/case-extract/case-extract.less
@@ -107,7 +107,6 @@
 			margin-top: 0;
 			height: 37px;
 			width: 37px;
-			padding: 9px;
 		}
 		
 		@media @screen-large {
