--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -78,7 +78,6 @@
     background: none;
 	text-decoration: none;
     border: none;
-    padding: 0;
     color: @red;
 	transition: background 0.3s ease, color 0.3s ease;
 
@@ -106,11 +105,15 @@
         transition: background 0.3s ease;
         width: 40px;
         height: 40px;
-
+        padding: 8px;
         @media @screen-small {
             width: 52px;
             height: 52px;
             border: 1px solid;
+        }
+        
+        @media @screen-large {
+            padding: 15px;
         }
 
         path {
